Los iconitos de ahí abajo!!!

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <html>
 <h1>Mi pagina web</h1>
 <div class="heros">
-Super Hero!!!
+!Super Hero!
+</div>
+<div class='item'>
+¡Somos muy buenos!
+</div>
+
+<div class='item'>
+Noticias
+</div>
+<div>
+Clientes
 </div>
 </html>
