Añadiendo enlace en el index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@ NOMEGUSTA
 </div>
 
 <div class='item'>
+<a href='servicios.html'>Servicios</a>
+</div>
+<div class='item'>
 Noticias
 </div>
 <div>
